--- a/index.html
+++ b/index.html
@@ -4,34 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chính sách Quyền Riêng Tư - Cẩm nang Trader</title>
+    <title>Privacy Policy - English Story in Level</title>
 </head>
 
 <body>
-    <h1>Chính sách Quyền Riêng Tư</h1>
+    <h1>Privacy Policy</h1>
     <p>
-        Chào mừng bạn đã sử dụng ứng dụng của chúng tôi! Chúng tôi cam kết tôn trọng và bảo vệ quyền riêng tư của bạn. Chính sách quyền riêng tư này giải thích rằng ứng dụng không thu thập bất kỳ thông tin cá nhân nào của bạn.
+        Welcome to our application! We are committed to respecting and protecting your privacy. This privacy policy explains that the application does not collect any of your personal information.
     </p>
 
-    <h2>Quảng cáo Google AdMob</h2>
+    <h2>Google AdMob Advertising</h2>
     <p>
-        Ứng dụng "Cẩm nang Trader" sử dụng Google AdMob để hiển thị quảng cáo. Khi bạn sử dụng ứng dụng này, có thể có quảng cáo được cung cấp bởi Google AdMob xuất hiện trong ứng dụng.
-        Google AdMob có thể sử dụng các công nghệ theo dõi (tracking) không cá nhân, chẳng hạn như các nhà cung cấp quảng cáo và bên thứ ba, để cung cấp quảng cáo phù hợp với sở thích và hành vi của người dùng. Những thông tin này không định danh cá nhân và không liên kết với thông tin cá nhân của bạn.
+        The "English Story in Level" app uses Google AdMob to display advertisements. When you use this application, you may see advertisements provided by Google AdMob within the app. Google AdMob may use non-personal tracking technologies, such as ad providers and third parties, to deliver ads that match the interests and behavior of users. This information is not personally identifiable and is not linked to your personal information.
     </p>
 
-    <h2>Bảo mật thông tin</h2>
+    <h2>Information Security</h2>
     <p>
-        Chúng tôi cam kết bảo vệ thông tin không cá nhân của bạn thông qua việc sử dụng các biện pháp bảo mật hiện đại và thực hiện các tiêu chuẩn công nghiệp để ngăn chặn truy cập trái phép, sử dụng sai mục đích, hoặc tiết lộ thông tin của bạn.
+        We are committed to protecting your non-personal information through the use of modern security measures and implementing industry standards to prevent unauthorized access, misuse, or disclosure of your information.
     </p>
 
-    <h2>Liên kết bên ngoài</h2>
+    <h2>External Links</h2>
     <p>
-        Ứng dụng "Cẩm nang Trader" có thể chứa liên kết đến các trang web bên ngoài hoặc dịch vụ của bên thứ ba. Chúng tôi không chịu trách nhiệm về nội dung hoặc quyền riêng tư của những trang web này. Hãy kiểm tra chính sách riêng tư của họ trước khi sử dụng.
+        The "English Story in Level" app may contain links to external websites or third-party services. We are not responsible for the content or privacy policies of these websites. Please check their privacy policies before using them.
     </p>
 
-    <h2>Tuân thủ luật pháp</h2>
+    <h2>Compliance with Laws</h2>
     <p>
-        Chúng tôi tuân thủ các luật pháp về quyền riêng tư và bảo mật dữ liệu áp dụng tại khu vực mà chúng tôi hoạt động.
+        We comply with privacy and data security laws applicable in the regions where we operate.
     </p>
 </body>
 
