--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <h2>Google AdMob Advertising</h2>
     <p>
-        The "English Story in Level" app uses Google AdMob to display advertisements. When you use this application, you may see advertisements provided by Google AdMob within the app. Google AdMob may use non-personal tracking technologies, such as ad providers and third parties, to deliver ads that match the interests and behavior of users. This information is not personally identifiable and is not linked to your personal information.
+        The app uses Google AdMob to display advertisements. When you use this application, you may see advertisements provided by Google AdMob within the app. Google AdMob may use non-personal tracking technologies, such as ad providers and third parties, to deliver ads that match the interests and behavior of users. This information is not personally identifiable and is not linked to your personal information.
     </p>
 
     <h2>Information Security</h2>
@@ -25,7 +25,7 @@
 
     <h2>External Links</h2>
     <p>
-        The "English Story in Level" app may contain links to external websites or third-party services. We are not responsible for the content or privacy policies of these websites. Please check their privacy policies before using them.
+        The app may contain links to external websites or third-party services. We are not responsible for the content or privacy policies of these websites. Please check their privacy policies before using them.
     </p>
 
     <h2>Compliance with Laws</h2>
