--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
     <h1>Privacy Policy</h1>
     <p>
-        Welcome to our application! We are committed to respecting and protecting your privacy. This privacy policy explains that the application does not collect any of your personal information.
+        Welcome to our application! We are committed to respecting and protecting your privacy. This privacy policy explains that the application does not collect any of your personal information, except as detailed below.
+    </p>
+
+    <h2>Location Services</h2>
+    <p>
+        To provide weather updates relevant to your current location, our app may require access to your device's location services. This data is only used to fetch and display weather information and is not stored or used for any other purposes. Location tracking may occur in the background even when the app is not in use, to ensure timely weather updates.
     </p>
 
     <h2>Google AdMob Advertising</h2>
